Fixed minor issues for browser. Working on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,9 @@
 /*==========================================
 BASIC STYLINGS
 ============================================*/
+html {
+  margin: 0;
+}
 
 body {
   margin: 0;
@@ -122,6 +125,7 @@ HEADER
   align-items: flex-start;
   padding: 20px 30px;
   flex-shrink: 0;
+  background-color: rgb(255, 205, 58);
 }
 
 #logo-title {
@@ -390,7 +394,7 @@ REVEAL FEATURE
 /*==========================================
 MOBILE OR BROWSER ADJUSTABILITY
 ============================================*/
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1500px) {
   .nav-bar .nav-container {
     display: flex;
     flex-direction: row;
@@ -407,6 +411,7 @@ MOBILE OR BROWSER ADJUSTABILITY
     padding: 10px 20px;
     flex-shrink: 0;
     order: 1;
+    background-color: rgb(255, 205, 58);
   }
 
   #logo-title {
@@ -473,6 +478,12 @@ MOBILE OR BROWSER ADJUSTABILITY
     width: 100%;
   }
 
+  .image-size {
+    object-fit: cover;
+    width: 100% !important;
+    height: 500px !important;
+  }
+
   .description {
     display: block;
     text-align: center;
@@ -480,28 +491,31 @@ MOBILE OR BROWSER ADJUSTABILITY
     margin: 40px 40px 40px 40px;
   }
 
-  .main-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  .main-container,
+  .left-right-container {
+    height: auto !important;
+    flex-direction: column !important;
+    width: 100%;
   }
 
   .left-side,
   .left-side-image {
     width: 100%;
     display: flex;
+    order: 1;
   }
 
   .left-side-image,
   .right-side-image {
-    width: 100%;
+    width: 100% !important;
     display: flex;
     order: 1;
   }
 
-  .left-side-image img {
+  .left-side-image img,
+  .right-side-image img {
     width: 100%;
-    height: auto;
+    height: 500px;
     object-fit: cover;
   }
 
@@ -518,7 +532,7 @@ MOBILE OR BROWSER ADJUSTABILITY
 
   .left-side-description,
   .right-side-description {
-    width: 100%;
+    width: 100% !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
